--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
-<!-- 		<footer>
+		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:j.grekow@pb.edu.pl">email</a></li>
+        		<li><a href="https://github.com/grekowj">github.com/grekowj</a></li>
 			</ul>
-		</footer> -->
+		</footer>
 	</body>
 </html>
