--- a/index.html
+++ b/index.html
@@ -1,30 +1,195 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Jacek G.</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Jacek G!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:j.grekow@pb.edu.pl">email</a></li>
-        		<li><a href="https://github.com/grekowj">github.com/grekowj</a></li>
-			</ul>
-		</footer>
-	</body>
+    <head>
+        <meta HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
+        <title>Home Page of Jacek Grekow</title>
+
+        <meta NAME="KEYWORDS" CONTENT="Jacek Grekow, Research, konsultacje">
+        <meta name="description" content="Home Page of dr. inż Jacek Grekow">
+        <meta name="robots" content="index, follow">
+        <link href="styl1.css" rel="stylesheet" type="text/css"/>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+        <script>
+            function openNav() {
+                document.getElementById("mySidebar").style.width = "250px";
+                document.getElementById("main").style.marginLeft = "250px";
+            }
+
+            function closeNav() {
+                document.getElementById("mySidebar").style.width = "0";
+                document.getElementById("main").style.marginLeft = "0";
+            }
+        </script>
+
+    </head>
+    
+    <body>
+        <!-- Page content -->
+        <div class="main">
+            <div id="mySidebar" class="sidebar">
+                <a href="javascript:void(0)" class="closebtn" id="closebtn" onclick="closeNav()">×</a>
+                <a href="http://pb.edu.pl/" target="blanc">  <img class="logo" SRC="./logo/LogoPB.jpg" NAME="logo PB" > </a>
+                <a href="http://wi.pb.edu.pl/" target="blanc">  <img class="logo" SRC="./logo/wi.png" NAME="logo WI PB" > </a>
+
+
+                <a HREF="index.html">Home</a>
+                <a HREF="jgTeaching.html">Teaching</a>
+                <a HREF="jgResearch.html">Research</a>
+                <a HREF="jgCV.html">CV</a>
+                <a HREF="jgLinks.html">Related Links</a>
+                <a HREF="jgMusic.html">Music</a>
+                <a HREF="jgPraceDypl.html">Students</a>
+
+
+
+
+            </div>
+
+            <table class="cala-szer">
+                <tr>
+<!--                    <td class="col-lewa">
+
+                                                <p class="msonormal-center">
+                                                    <a href="http://pb.edu.pl/" target="blanc">  <img class="logo" SRC="./logo/LogoPB.jpg" NAME="logo PB" > </a>
+                                                </p>
+                                                <p class="msonormal-center">
+                                                    <a href="http://wi.pb.edu.pl/" target="blanc">  <img class="logo" SRC="./logo/wi.png" NAME="logo WI PB" > </a>
+                                                </p>
+
+                    </td>             -->
+
+                    <td class="col-srodek">
+                        <table class="cala-szer">
+                            <tr>
+
+                                <td class="col-srodek-nagl">
+                                    <p class="msonormal-center">
+                                        Faculty of Computer Science 
+                                    </p>
+                                    <p class="msonormal-center">
+                                        Bialystok University od Technology
+                                    </p>
+                                    <p class="msonormal-center">
+                                        dr hab. inż. JACEK GREKOW</p>
+                                </td>
+
+                            </tr>
+                        </table>
+                        <table class="cala-szer">
+                            <tr VALIGN=TOP>
+<!--                                <td class="col-lewa">
+                                                                        <p class="menu"><a HREF="index.html">Home</a></p>
+                                                                        <p class="menu"><a HREF="jgTeaching.html">Teaching</a></p>
+                                                                        <p class="menu"><a HREF="jgResearch.html">Research</a></p>
+                                                                        <p class="menu"><a HREF="jgCV.html">CV</a></p>
+                                                                        <p class="menu"><a HREF="jgLinks.html">Related Links</a></p>
+                                                                        <p class="menu"><a HREF="jgMusic.html">Music</a></p>
+                                                                        <p class="menu"><a HREF="jgPraceDypl.html">Students</a></p>
+
+                                </td>-->
+                                <td class="col-srodek">
+                                    <div id="main">
+                                        <button class="openbtn" onclick="openNav()">☰</button>  
+                                    </div>
+                                    <p>
+                                        Wydział Informatyki - Politechnika Białostocka 
+                                    </p>
+                                    <p> ul.
+                                        Wiejska 45A 
+                                    </p>
+                                    <p >Białystok
+                                        15-351</p>
+                                    <br><br>
+
+
+                                    <p>
+                                        Time-table:
+                                        <a HREF="http://degra.wi.pb.edu.pl/rozklady/rozklad.php?page=nau&id=98" target="blanc"> Link</a>
+                                    </p>
+                                    <p>Pokój 137</p>
+
+                                    <!--                                        <p>Konsultacje w sesji</p>
+                                                                            <p> 2.02.2015, pon. - g.10:15 - 12</p>
+                                                                            <p> 3.02.2015, wt.  - g.14 - 15:30</p>
+                                                                            <p> 9.02.2015, pon. - g.10:15 - 12</p>-->
+
+
+
+
+
+                                    <br/>
+                                    <br/>
+                                    <br/>
+                                    <br/>
+                                    <br/>
+                                    <br/>
+
+
+                                    <p>E-mail:
+                                        j.grekow[at]pb.edu.pl</p>
+                                    <br/>
+                                    <br/>
+                                    <br/>
+                                    <br/>
+                                </td>
+                                <td WIDTH=16%>
+                                    <p><img  class="foto" SRC="GrekowJ_Foto2.jpg" NAME="grafika2" ><br>
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr>
+<!--                                <td class="col-menu">
+                                </td>-->
+                                <td class="col-body">
+                                    <p class="stopka">Copyright &copy; 2001-
+                                        <script language="javascript" type="text/javascript"> var today = new Date();
+                                            var year = today.getFullYear();
+                                            document.write(year);</script>
+                                        Home Page of Jacek Grekow
+                                    </p>
+
+
+
+
+                                </td>
+                            </tr>
+                        </table>
+
+                        <!-- stat.4u.pl NiE KaSoWaC --><a HREF="http://stat.4u.pl/?grekowjpb" TARGET="_top"><img SRC="http://adstat.4u.pl/s4u.gif" NAME="graphics1" ALIGN=BOTTOM WIDTH=75 HEIGHT=38 BORDER=0></a>
+                        <SCRIPT LANGUAGE="JavaScript">
+                            <!--
+                            function s4upl() {
+                                return "&amp;r=er";
+                            }
+                            //-->
+                        </SCRIPT>
+                        <SCRIPT LANGUAGE="JavaScript" SRC="http://adstat.4u.pl/s.js?grekowjpb"></SCRIPT><SCRIPT LANGUAGE="JavaScript">
+                            <!--
+                            s4uext = s4upl();
+                            document.write('<img alt="" src="http://stat.4u.pl/cgi-bin/s.cgi?i=grekowjpb' + s4uext + '" width="1" height="1">')
+                            //-->
+                        </SCRIPT><noscript><img SRC="http://stat.4u.pl/cgi-bin/s.cgi?i=grekowjpb&amp;r=ns" NAME="graphics2" ALIGN=BOTTOM WIDTH=2 HEIGHT=2 BORDER=0></noscript><!-- stat.4u.pl KoNiEc -->
+                    </td>
+
+
+
+<!--                    <td class="col-prawa">
+
+                    </td>-->
+
+                </tr>
+
+
+
+
+            </table>
+
+            <p><br><br>
+            </p>
+
+        </div>
+
+    </body>
 </html>
