--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                         Bialystok University od Technology
                                     </p>
                                     <p class="msonormal-center">
-                                        dr hab. inż. JACEK GREKOW ha</p>
+                                        dr hab. inż. JACEK GREKOW ha ss</p>
                                 </td>
 
                             </tr>
