baseline gen exampl

--- a/jgPraceDypl.html
+++ b/jgPraceDypl.html
@@ -122,9 +122,7 @@
                                     <ul>                                    
                                         <!--<li>Mateusz Auron - System tworzenia map urządzeń sieciowych i ich monitoring </li>-->
                                         <li>Maciej Szklarzewski - Aplikacja do zgłaszania i śledzenia błędów w oprogramowaniu</li>
-                                        <li>Paulina Kierzkowska  - Aplikacja edukacyjna do trenowania rozpoznawania utworów muzycznych</li>
-                                        <li>Agnieszka Ignatowicz - Aplikacja edukacyjna do rozpoznawania dzieł sztuki</li>
-                                        <li>Zawadzki Grzegorz - Wykrywanie gatunku muzycznego</li>
+
                                         <!--                                    <li>Kuklik Anna - Wykorzystanie modułu SQL Server Integration Services do migracji danych </li>-->
                                         <!--<li>Gawrysiak Mateusz - Serwis wspomagający organizowanie i przeprowadzanie zawodów sportowych</li>-->
                                     </ul>
@@ -252,6 +250,9 @@
                                         <B>Zakończone prace inżynierskie:</B>
                                     </p>
                                     <ul>
+                                        <li>Paulina Kierzkowska (2021) - Aplikacja edukacyjna do trenowania rozpoznawania utworów muzycznych</li>
+                                        <li>Agnieszka Ignatowicz (2021) - Aplikacja edukacyjna do rozpoznawania dzieł sztuki</li>
+                                        <li>Zawadzki Grzegorz (2021) - Wykrywanie gatunku muzycznego</li>
                                         <li>Dawid Rydzewski (2021) - Generowanie muzyki z użyciem sieci neuronowych</li>
                                         <li>Olender Wiktor (2021) - Wizualne animacje na podstawie pliku muzycznego</li>
                                         <li>Damian Bogucki (2020) - Wizualizacja muzyki w czasie rzeczywistym</li>
