--- a/jgResearch.html
+++ b/jgResearch.html
@@ -316,6 +316,13 @@
                                                 pp. 167–186. Springer International Publishing, Cham (2021)
                                             </p>
                                         </li>
+                                        <li>
+                                            <p>
+                                                Grekow, J.: Music emotion recognition using recurrent neural networks and
+                                                pretrained models. Journal of Intelligent Information Systems, Springer (2021)
+                                            </p>
+                                        </li>
+
 
 
                                     </ul>
