--- a/jgResearch.html
+++ b/jgResearch.html
@@ -319,7 +319,11 @@
                                         <li>
                                             <p>
                                                 Grekow, J.: Music emotion recognition using recurrent neural networks and
-                                                pretrained models. Journal of Intelligent Information Systems, Springer (2021)
+                                                pretrained models. Journal of Intelligent Information Systems  57(3), 531–546, Springer (2021)
+                                            </p>
+                                            <p>
+                                                J. Grekow and T. Dimitrova-Grekow, Monophonic Music Generation With a Given Emotion Using Conditional Variational Autoencoder, 
+                                                IEEE Access, vol. 9, pp. 129088-129101, (2021)
                                             </p>
                                         </li>
 
