--- a/jgResearch.html
+++ b/jgResearch.html
@@ -322,7 +322,13 @@
                                                 pretrained models. Journal of Intelligent Information Systems  57(3), 531–546, Springer (2021)
                                             </p>
                                             <p>
-                                                J. Grekow and T. Dimitrova-Grekow, Monophonic Music Generation With a Given Emotion Using Conditional Variational Autoencoder, 
+                                                Grekow, J.: Generating musical sequences with a given emotion. In: 2021
+                                                IEEE International Conference on Systems, Man, and Cybernetics (SMC).
+                                                pp. 1941–1946 (2021)
+                                            </p>
+                                            <p>
+                                                J. Grekow and T. Dimitrova-Grekow, Monophonic Music Generation With 
+                                                a Given Emotion Using Conditional Variational Autoencoder, 
                                                 IEEE Access, vol. 9, pp. 129088-129101, (2021)
                                             </p>
                                         </li>
