--- a/jgPraceDypl.html
+++ b/jgPraceDypl.html
@@ -121,7 +121,7 @@
                                     </p>
                                     <ul>                                    
                                         <!--<li>Mateusz Auron - System tworzenia map urządzeń sieciowych i ich monitoring </li>-->
-                                        <li>Maciej Szklarzewski - Aplikacja do zgłaszania i śledzenia błędów w oprogramowaniu</li>
+                                       
 
                                         <!--                                    <li>Kuklik Anna - Wykorzystanie modułu SQL Server Integration Services do migracji danych </li>-->
                                         <!--<li>Gawrysiak Mateusz - Serwis wspomagający organizowanie i przeprowadzanie zawodów sportowych</li>-->
@@ -250,6 +250,7 @@
                                         <B>Zakończone prace inżynierskie:</B>
                                     </p>
                                     <ul>
+                                         <li>Maciej Szklarzewski (2021) - Aplikacja do zgłaszania i śledzenia błędów w oprogramowaniu</li>
                                         <li>Paulina Kierzkowska (2021) - Aplikacja edukacyjna do trenowania rozpoznawania utworów muzycznych</li>
                                         <li>Agnieszka Ignatowicz (2021) - Aplikacja edukacyjna do rozpoznawania dzieł sztuki</li>
                                         <li>Zawadzki Grzegorz (2021) - Wykrywanie gatunku muzycznego</li>
