--- a/jgMusic.html
+++ b/jgMusic.html
@@ -141,7 +141,7 @@
 
 
                                         <li>
-                                            <a HREF="http://www.sarakina.art.pl/pl/plyta-cd-zamowienie.htm" target="blanc">Sarakina Balkan Band</a>
+                                            <a HREF="https://www.sarakina.art.pl/pl/plyta-cd-zamowienie.htm" target="blanc">Sarakina Balkan Band</a>
                                         </li>
                                     </ol>
 
@@ -150,8 +150,9 @@
                                     <table class="cala-szer">
                                         <tr>
                                             <td class="col-menu">
-
-                                                <img SRC="CDKyri.jpg" class="cd">
+                                                <a href="https://www.sarakina.art.pl/akordeon-jacek-grekow/kyrillikata/">
+                                                    <img SRC="CDKyri.jpg" class="cd">
+                                                </a>
 
                                             </td>
                                             <td class="col-body">
@@ -216,7 +217,7 @@
                                         </tr>
                                         <tr>
                                             <td class="col-menu">                                           
-                                                <a href="http://www.sarakina.art.pl">
+                                                <a href="https://www.sarakina.art.pl">
                                                     <img SRC="CDs/DoFire.jpg"  alt="akordeon, gajda, kaval - Sarakina" title="muzyka balkanska" class="cd">
                                                 </a>
 
@@ -232,7 +233,7 @@
                                         <tr>
                                             <td class="col-menu">
 
-                                                <a href="http://www.sarakina.art.pl">
+                                                <a href="https://www.sarakina.art.pl">
                                                     <img SRC="CDs/CD-Sarakina-Live-In-Studi-m.jpg"  alt="akordeon, gajda, kaval - Sarakina" title="muzyka balkanska" class="cd">
                                                 </a>
 
@@ -430,9 +431,9 @@
 
 
 
-<!--                    <td class="col-prawa">
-
-                    </td>-->
+                    <!--                    <td class="col-prawa">
+                    
+                                        </td>-->
 
                 </tr>
 
