--- a/jgMusic.html
+++ b/jgMusic.html
@@ -191,8 +191,10 @@
                                             </td>
                                         </tr>
                                         <tr>                                        
-                                            <td class="col-menu">                                         
-                                                <img SRC="CDClassic.jpg" class="cd">                                            
+                                            <td class="col-menu">    
+                                                <a href="https://www.sarakina.art.pl/akordeon-jacek-grekow/">
+                                                    <img SRC="CDClassic.jpg" class="cd">  
+                                                </a>
 
                                             </td>
                                             <td class="col-body">
