--- a/jgPraceDypl.html
+++ b/jgPraceDypl.html
@@ -98,6 +98,8 @@
                                     </p>
 
                                     <ul>  
+                                         <li>Szeligowski Tomasz - Wydajność kolekcji w języku Java</li>
+                                        <li>Wasiluk Maksymilian  - Detekcja emocji w plikach muzycznych</li>
                                         <li>Jakub Miłkowski - Porównanie podejść do projektowania współczesnych API </li>
 
 
