Poprawka prac dyplomantow

--- a/jgPraceDypl.html
+++ b/jgPraceDypl.html
@@ -98,7 +98,7 @@
                                     </p>
 
                                     <ul>  
-                                         <li>Szeligowski Tomasz - Wydajność kolekcji w języku Java</li>
+                                         
                                         <li>Wasiluk Maksymilian  - Detekcja emocji w plikach muzycznych</li>
                                         <li>Jakub Miłkowski - Porównanie podejść do projektowania współczesnych API </li>
 
@@ -211,6 +211,7 @@
                                     </p>
 
                                     <ul>
+                                        <li>Szeligowski Tomasz (2022) - Wydajność kolekcji w języku Java</li>
                                         <li>Jakub Zrajkowski (2021) - Detekcja tonacji w plikach muzycznych</li>
                                         <li>Piotr Śliwowski (2020) - Kontenery IoC na platformie .NET Core</li>
                                         <li>Michal Dargiewicz (2020) - Odśmiecanie pamięci w języku Java</li>
