--- a/jgMusic.html
+++ b/jgMusic.html
@@ -92,7 +92,7 @@
                                         <button class="openbtn" onclick="openNav()">☰</button>  
                                     </div>
                                     
-                                      <a HREF=" https://www.mixcloud.com/RADIO_AKADERA_87_7FM/audycja-nie-tylko-marynistyczna-go%C5%9Bciem-jest-prof-jacek-grekow-z-wydz-informatyki-pb/" target="blanc">
+                                      <a HREF="./audycja-nie-tylko-marynistyczna-16-listopada.mp3" target="blanc">
                                           Radio Akadera - Audycja Nie Tylko Marynistyczna - gościem jest prof. Jacek Grekow z wydz. Informatyki PB, 11/2022</a>
 
                                     
