Dodanie Balkan grooves

--- a/jgMusic.html
+++ b/jgMusic.html
@@ -271,6 +271,22 @@
                                                 </p>
                                             </td>
                                         </tr>
+                                         <tr>
+                                            <td class="col-menu">
+
+                                                <a href="http://www.sarakina.art.pl/ethno-jazz-trio/">
+                                                    <img SRC="CDs/CD-Balkan-grooves-page_1-mm.png"  alt="Balkan grooves - TRIO Grekow / Peev / Tsvyatkov" title="Balkan grooves - TRIO Grekow / Peev / Tsvyatkov" class="cd">
+                                                </a>
+
+                                            </td>
+                                            <td class="col-body">
+                                                <p>
+                                                    CD Balkan grooves - TRIO Grekow / Peev / Tsvyatkov
+                                                    (<I>Production: Amadeus, Under the patronage: 
+                                                        Jazz Forum, Bułgarski Instytut Kultury w Warszawie, Pismo Folkowe</I>), 2023
+                                                </p>
+                                            </td>
+                                        </tr>
 
 
                                         <tr>
