--- a/jgResearch.html
+++ b/jgResearch.html
@@ -110,6 +110,8 @@
                                         <li><a HREF="./Performances/">Comparative Analysis of Musical Performances</a></li>
                                         <li><a HREF="./research/MusicVisualisation/">Music visualisation</a></li>
                                         <li><a HREF="./research/mrs/">Content-based music recommendation</a></li>
+                                        <li><a HREF="./research/musgenvaecnn_4v/">Generating polyphonic symbolic emotional music in the style of J.S.Bach</a></li>
+                                        
 
                                     </ul>
                                     <p>
