--- a/research/musgenvaecnn_4v/index.html
+++ b/research/musgenvaecnn_4v/index.html
@@ -107,34 +107,42 @@
 
                                     </ul>
                                     <h2>Generated music examples labeled with four emotions</h2>
-                                     <midi-player
-                                            src="./examples/e1/new_generated_0.mid"
-                                            sound-font visualizer="#myVisualizer">
-                                        </midi-player>
-                                        <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
-                                    <table class="cala-szer">
-                                        <tr>
-                                            <td>
-                                                Emotion
-                                            </td>
-                                            <td>
-                                                MIDI
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                e1
-                                            </td>
-                                            <td>
-                                       
-
-
+                            <midi-player
+                                src="./examples/e1/new_generated_0.mid"
+                                sound-font visualizer="#myVisualizer">
+                            </midi-player>
+                            <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
+                            <table class="cala-szer">
+                                <tr>
+                                    <td>
+                                        Example
+                                    </td>
+                                    <td>
+                                        Emotion - Quarter /  Arousal-Valence
+                                    </td>
+                                    <td>
+                                        MIDI
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Example_1   
+                                    </td>
+                                    <td>
+                                        e1 - Q1 / high-high 
+                                    </td>
+                                    <td>
+                                <midi-player
+                                    src="./examples/e1/new_generated_0.mid"
+                                    sound-font visualizer="#myVisualizer">
+                                </midi-player>
+                                <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
                                 </td>
-                            </tr>
+                                </tr>
 
-                        </table>
+                            </table>
 
-                        <!--<img class="figure" SRC="./Pictures/P1-AV-Rub-Sok.png" alt="Aplication" width="100">--> 
+                            <!--<img class="figure" SRC="./Pictures/P1-AV-Rub-Sok.png" alt="Aplication" width="100">--> 
 
 
                     </td>
