--- a/research/musgenvaecnn_4v/index.html
+++ b/research/musgenvaecnn_4v/index.html
@@ -102,47 +102,48 @@
 
 
                                     <ul>
-                                        <li><a HREF="https://github.com/grekowj/musgenvaecnn_4v">Training dataset, code, generated exaples</a></li>
+                                        <li><a HREF="https://github.com/grekowj/musgenvaecnn_4v" target="_blank">Training dataset, code, generated exaples</a></li>
                                         <!--<li><a HREF="./generated_exaples">Generated exaples </a></li>-->                              
 
                                     </ul>
                                     <h2>Generated music examples labeled with four emotions</h2>
-                            <midi-player
-                                src="./examples/e1/new_generated_0.mid"
-                                sound-font visualizer="#myVisualizer">
-                            </midi-player>
-                            <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
-                            <table class="cala-szer">
-                                <tr>
-                                    <td>
-                                        Example
-                                    </td>
-                                    <td>
-                                        Emotion - Quarter /  Arousal-Valence
-                                    </td>
-                                    <td>
-                                        MIDI
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Example_1   
-                                    </td>
-                                    <td>
-                                        e1 - Q1 / high-high 
-                                    </td>
-                                    <td>
-                                <midi-player
-                                    src="./examples/e1/new_generated_0.mid"
-                                    sound-font visualizer="#myVisualizer">
-                                </midi-player>
-                                <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
+
+                                    <table class="cala-szer">
+                                        <tr>
+                                            <td>
+                                                <b>Example</b>
+                                            </td>
+                                            <td>
+                                                <b>Emotion</b>
+                                            </td>
+                                            <td>
+                                                <b>Quarter in Russell's model /  Arousal-Valence</b>
+                                            </td>
+                                            <td>
+                                                <b>MIDI</b>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                Example_1   
+                                            </td>
+                                            <td>
+                                                e1   
+                                            </td>
+                                            <td>
+                                                Q1 / high-high 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e1/new_generated_0.mid"
+                                                      sound-font visualizer="#myVisualizer">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
                                 </td>
-                                </tr>
+                            </tr>
 
-                            </table>
+                        </table>
 
-                            <!--<img class="figure" SRC="./Pictures/P1-AV-Rub-Sok.png" alt="Aplication" width="100">--> 
+                        <!--<img class="figure" SRC="./Pictures/P1-AV-Rub-Sok.png" alt="Aplication" width="100">--> 
 
 
                     </td>
