--- a/research/musgenvaecnn_4v/index.html
+++ b/research/musgenvaecnn_4v/index.html
@@ -140,6 +140,40 @@
                                         <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
                                 </td>
                             </tr>
+                            <tr>
+                                            <td>
+                                                Example_2   
+                                            </td>
+                                            <td>
+                                                e1   
+                                            </td>
+                                            <td>
+                                                Q1 / high-high 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e1/new_generated_15.mid"
+                                                      sound-font visualizer="#myVisualizer">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
+                                </td>
+                            </tr>
+                            <tr>
+                                            <td>
+                                                Example_3   
+                                            </td>
+                                            <td>
+                                                e1   
+                                            </td>
+                                            <td>
+                                                Q1 / high-high 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e1/new_generated_9.mid"
+                                                      sound-font visualizer="#myVisualizer">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
+                                </td>
+                            </tr>
 
                         </table>
 
