--- a/research/musgenvaecnn_4v/index.html
+++ b/research/musgenvaecnn_4v/index.html
@@ -135,9 +135,9 @@
                                             </td>
                                             <td>
                                         <midi-player  src="./examples/e1/new_generated_0.mid"
-                                                      sound-font visualizer="#myVisualizer">
+                                                      sound-font visualizer="#myVisualizer_1">
                                         </midi-player>
-                                        <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_1"></midi-visualizer>
                                 </td>
                             </tr>
                             <tr>
@@ -152,9 +152,9 @@
                                             </td>
                                             <td>
                                         <midi-player  src="./examples/e1/new_generated_15.mid"
-                                                      sound-font visualizer="#myVisualizer">
+                                                      sound-font visualizer="#myVisualizer_2">
                                         </midi-player>
-                                        <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_2"></midi-visualizer>
                                 </td>
                             </tr>
                             <tr>
@@ -169,9 +169,9 @@
                                             </td>
                                             <td>
                                         <midi-player  src="./examples/e1/new_generated_9.mid"
-                                                      sound-font visualizer="#myVisualizer">
+                                                      sound-font visualizer="#myVisualizer_3">
                                         </midi-player>
-                                        <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_3"></midi-visualizer>
                                 </td>
                             </tr>
 
