--- a/research/musgenvaecnn_4v/index.html
+++ b/research/musgenvaecnn_4v/index.html
@@ -174,6 +174,57 @@
                                         <midi-visualizer type="piano-roll" id="myVisualizer_3"></midi-visualizer>
                                 </td>
                             </tr>
+                            <tr>
+                                            <td>
+                                                Example_4   
+                                            </td>
+                                            <td>
+                                                e2   
+                                            </td>
+                                            <td>
+                                                Q2 / high-low 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e2/new_generated_3.mid"
+                                                      sound-font visualizer="#myVisualizer_4">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_4"></midi-visualizer>
+                                </td>
+                            </tr>
+                            <tr>
+                                            <td>
+                                                Example_5   
+                                            </td>
+                                            <td>
+                                                e2   
+                                            </td>
+                                            <td>
+                                                Q2 / high-low 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e2/new_generated_4.mid"
+                                                      sound-font visualizer="#myVisualizer_5">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_5"></midi-visualizer>
+                                </td>
+                            </tr>
+                            <tr>
+                                            <td>
+                                                Example_6   
+                                            </td>
+                                            <td>
+                                                e2   
+                                            </td>
+                                            <td>
+                                                Q2 / high-low 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e2/new_generated_8.mid"
+                                                      sound-font visualizer="#myVisualizer_6">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_6"></midi-visualizer>
+                                </td>
+                            </tr>
 
                         </table>
 
