--- a/research/musgenvaecnn_4v/index.html
+++ b/research/musgenvaecnn_4v/index.html
@@ -225,6 +225,108 @@
                                         <midi-visualizer type="piano-roll" id="myVisualizer_6"></midi-visualizer>
                                 </td>
                             </tr>
+                            <tr>
+                                            <td>
+                                                Example_7   
+                                            </td>
+                                            <td>
+                                                e3   
+                                            </td>
+                                            <td>
+                                                Q3 / low-low 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e3/new_generated_3.mid"
+                                                      sound-font visualizer="#myVisualizer_7">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_7"></midi-visualizer>
+                                </td>
+                            </tr>
+                             <tr>
+                                            <td>
+                                                Example_8   
+                                            </td>
+                                            <td>
+                                                e3   
+                                            </td>
+                                            <td>
+                                                Q3 / low-low 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e3/new_generated_9.mid"
+                                                      sound-font visualizer="#myVisualizer_8">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_8"></midi-visualizer>
+                                </td>
+                            </tr>
+                             <tr>
+                                            <td>
+                                                Example_9   
+                                            </td>
+                                            <td>
+                                                e3   
+                                            </td>
+                                            <td>
+                                                Q3 / low-low 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e3/new_generated_18.mid"
+                                                      sound-font visualizer="#myVisualizer_9">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_9"></midi-visualizer>
+                                </td>
+                            </tr>
+                            <tr>
+                                            <td>
+                                                Example_10   
+                                            </td>
+                                            <td>
+                                                e4   
+                                            </td>
+                                            <td>
+                                                Q4 / low-high 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e4/new_generated_5.mid"
+                                                      sound-font visualizer="#myVisualizer_10">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_10"></midi-visualizer>
+                                </td>
+                            </tr>
+                            <tr>
+                                            <td>
+                                                Example_11   
+                                            </td>
+                                            <td>
+                                                e4   
+                                            </td>
+                                            <td>
+                                                Q4 / low-high 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e4/new_generated_8.mid"
+                                                      sound-font visualizer="#myVisualizer_11">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_11"></midi-visualizer>
+                                </td>
+                            </tr>
+                            <tr>
+                                            <td>
+                                                Example_12   
+                                            </td>
+                                            <td>
+                                                e4   
+                                            </td>
+                                            <td>
+                                                Q4 / low-high 
+                                            </td>
+                                            <td>
+                                        <midi-player  src="./examples/e4/new_generated_9.mid"
+                                                      sound-font visualizer="#myVisualizer_12">
+                                        </midi-player>
+                                        <midi-visualizer type="piano-roll" id="myVisualizer_12"></midi-visualizer>
+                                </td>
+                            </tr>
 
                         </table>
 
