--- a/research/musgenvaecnn_4v/index.html
+++ b/research/musgenvaecnn_4v/index.html
@@ -97,7 +97,7 @@
                                     </div>
                                     <p class="menu"> </p>
                                     <p></p>
-                                    <h1>Generating polyphonic symbolic emotional music in the style of Bach using convolutional CVAE</h1>
+                                    <h1>Grekow J. - Generating polyphonic symbolic emotional music in the style of Bach using convolutional CVAE</h1>
 
 
 
