Dodanie mono gen projekt

--- a/research/musgen/index.html
+++ b/research/musgen/index.html
@@ -91,7 +91,7 @@
                                     <div id="main">
                                         <button class="openbtn" onclick="openNav()">☰</button>  
                                     </div>
-                                    <p class="menu">Music generation with a given emotion using VAE </p>
+                                    <p class="menu">Monophonic Music Generation With a Given Emotion Using Conditional Variational Autoencoder </p>
                                     <p>
 
 
